--- a/clients/Android/Grapevine/app/src/main/res/values/strings.xml
+++ b/clients/Android/Grapevine/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Grapevine</string>
+    <string name="event_feed">Event Feed</string>
 
     <string name="action_settings">Settings</string>
 
