--- a/clients/Android/Grapevine/app/src/main/res/values/strings.xml
+++ b/clients/Android/Grapevine/app/src/main/res/values/strings.xml
@@ -20,4 +20,8 @@
     <string name="register_user_general_error">Whoops. There was a problem registering account. Please try again later.</string>
     <string name="event_list_empty">It looks like there are no events in your grapevine. Try adding some groups and we\'ll tell you what they\'ve planned :)</string>
     <string name="add_group">Add group</string>
+    <string name="title_activity_add_group">AddGroup</string>
+    <string name="add_group_hint">Group name</string>
+    <string name="facebook">Facebook</string>
+    <string name="twitter">Twitter</string>
 </resources>
