--- a/clients/Android/Grapevine/app/src/main/res/values/strings.xml
+++ b/clients/Android/Grapevine/app/src/main/res/values/strings.xml
@@ -373,4 +373,6 @@ THIS SOFTWARE IS PROVIDED BY HIRONDELLE SYSTEMS \'\'AS IS\'\' AND ANY EXPRESS OR
     <string name="forgot_password_2">Forgot your password?</string>
     <string name="forgotten_password_description">No worries! Just enter your email address and we\'ll send you an email with instructions on how to reset your password.</string>
     <string name="forgotten_password_hint">Email Address</string>
+    <string name="tomorrow">Tomorrow</string>
+    <string name="today">Today</string>
 </resources>
